[package]
edition = "2021"
name = "shake-multihash"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core2 = "0.4.0"
multihash = "0.18.1"
# multihash-derive = "0.8.1"
sha3 = "0.10.8"

[dev-dependencies]
amcl_wrapper = {version = "0.4.0", features = ["bls381"]}
cid = "0.10.1"
hex = "0.4.3"
hex-literal = "*"
multibase = "*"
